serpentine/src/snapshots/serpentine__tests__from_host_fail.snek.snap
---
source: serpentine/src/main.rs
expression: "$crate :: test_support :: render_error(& err)"
---
node_error

  x Error in node
  |->   x hashing file contents
  |   
  `-> OS error <redacted>
   ,-[<redacted-path>:4:26]
 3 | missing_file = FromHost("./missing.txt");
 4 | export DEFAULT = image > With(missing_file, "foo.txt");
   :                          ^^^^^^^^^^^^^^|^^^^^^^^^^^^^
   :                                        `-- Error occurred in this node
   `----
